--- a/latex_source/bibl_tesi.bib
+++ b/latex_source/bibl_tesi.bib
@@ -2,12 +2,46 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Leonardo Cavagnis at 2015-11-13 13:04:54 +0100 
+%% Created for Leonardo Cavagnis at 2015-11-13 17:26:35 +0100 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@book{tanembaum,
+	Author = {A.S. Tanenbaum},
+	Date-Added = {2015-11-13 15:47:59 +0000},
+	Date-Modified = {2015-11-13 15:48:29 +0000},
+	Publisher = {Pearson Education},
+	Title = {Architettura dei calcolatori. Un approccio strutturale.},
+	Year = {2006}}
+
+@url{fxpdoc,
+	Date-Added = {2015-11-13 14:59:51 +0000},
+	Date-Modified = {2015-11-13 14:59:57 +0000},
+	Keywords = {http://www.ni.com/newsletter/50303/en/},
+	Title = {http://www.ni.com/newsletter/50303/en/}}
+
+@url{4wirehs,
+	Date-Added = {2015-11-13 14:40:13 +0000},
+	Date-Modified = {2015-11-13 14:40:34 +0000},
+	Keywords = {https://decibel.ni.com/content/docs/DOC-12682},
+	Title = {https://decibel.ni.com/content/docs/DOC-12682}}
+
+@inproceedings{1007077,
+	Author = {Agrez, D.},
+	Booktitle = {Instrumentation and Measurement Technology Conference, 2002. IMTC/2002. Proceedings of the 19th IEEE},
+	Date-Added = {2015-11-13 13:12:03 +0000},
+	Date-Modified = {2015-11-13 13:12:03 +0000},
+	Doi = {10.1109/IMTC.2002.1007077},
+	Issn = {1091-5281},
+	Keywords = {discrete Fourier transforms;error analysis;frequency estimation;interpolation;signal processing;time-varying systems;Hanning window;amplitude variation;bias removal;discrete Fourier transformation;frequency estimation;frequency variation;instantaneous frequency;interpolated DFT;nonstationary case errors;nonstationary signals;periodic signal;recovery time;rectangular window;stationary case errors;systematic errors;Algorithm design and analysis;Discrete Fourier transforms;Error analysis;Frequency conversion;Frequency estimation;Frequency measurement;Interpolation;Power system control;Signal analysis;Time measurement},
+	Pages = {925-930 vol.2},
+	Title = {Frequency estimation of the non-stationary signals using interpolated DFT},
+	Volume = {2},
+	Year = {2002},
+	Bdsk-Url-1 = {http://dx.doi.org/10.1109/IMTC.2002.1007077}}
 
 @book{bluebook,
 	Author = {M. Fingeroff},
