--- a/latex_source/capitolo2.tex
+++ b/latex_source/capitolo2.tex
@@ -508,7 +508,7 @@ Esprimendo le grandezze $f_{rise}$ e $f_{fall}$ attraverso le seguenti relazioni
 \end{equation}
 dove $v$ è la velocità del bersaglio e $T$ è il semiperiodo della triangolare di modulazione, è possibile definire l'equazione della distanza assoluta $s$ in maniera più precisa:
 \begin{equation}
-	s = \frac{f_{rise}+f_{fall}}{2} \left [ \frac{\lambda^2}{2k\left ( \frac{\Delta I}{\Delta T} \right )}  \right ]
+	s = \frac{f_{rise}+f_{fall}}{2} \left [ \frac{\lambda^2}{2\left ( \frac{\Delta I}{\Delta T} \frac{\Delta \lambda}{\Delta I} \right )}  \right ]
 \end{equation}
 Questa tecnica risulta più accurata della precedente perché è limitata solamente dalla precisione con la quale è possibile misurare il periodo e dalla capacità della sorgente di generare un segnale interferometrico ripetibile. 
 
