--- a/latex_source/capitolo5.tex
+++ b/latex_source/capitolo5.tex
@@ -1,5 +1,5 @@
 \chapter{Misure effettuate e dati sperimentali}
-\label{conclusioni}
+\label{capitolo5}
 \thispagestyle{empty}
 
 \noindent %%TODO Cap 5
