--- a/latex_source/bibl_tesi.bib
+++ b/latex_source/bibl_tesi.bib
@@ -2,12 +2,18 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Leonardo Cavagnis at 2015-11-13 17:42:00 +0100 
+%% Created for Leonardo Cavagnis at 2015-11-14 10:48:02 +0100 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@url{standa,
+	Date-Added = {2015-11-14 09:44:34 +0000},
+	Date-Modified = {2015-11-14 09:47:59 +0000},
+	Keywords = {http://www.standa.lt/products/catalog/motorised \_ positioners?item=60},
+	Title = {http://www.standa.lt/products/catalog/motorised \_ positioners?item=60}}
 
 @book{tanembaum,
 	Author = {A.S. Tanenbaum},
