--- a/latex_source/tesi.tex
+++ b/latex_source/tesi.tex
@@ -11,6 +11,7 @@
 \usepackage[scriptsize]{caption} 
 \usepackage{siunitx}
 \usepackage{gensymb}
+\usepackage{multirow}
 \DeclareSIUnit{\EUR}{\text{\euro}}
 
 \usepackage{algorithm}
